# agent-of-empires

./: AGENTS.md  CHANGELOG.md  Cargo.toml  codecov.yml
aoe-settings-derive/: Cargo.toml
aoe-settings-derive/src/: lib.rs
cockpit-worker/aoe-agent/: package-lock.json  package.json
docs/: development.md  push-notifications.md  sounds.md  telemetry.md
docs/cli/: reference.md
docs/cockpit/: interface.md
docs/development/: adding-file-watch-consumers.md  web-dashboard.md
docs/guides/: configuration.md  diff-view.md  sandbox.md  web-dashboard.md
docs/structured-view/: controls.md  interface.md  troubleshooting.md
src/: file_watch.rs  main.rs  status_hooks.rs
src/acp/: acp_client.rs  agent_compat.rs  elicitations.rs  event_store.rs  install_hints.rs  state.rs  supervisor.rs
src/cli/: add.rs  group.rs  list.rs  remove.rs  send.rs  session.rs  status.rs  tmux.rs  worktree.rs
src/cockpit/: event_store.rs  supervisor.rs
src/git/: diff.rs  mod.rs  remote.rs  worktree.rs
src/server/: acp_reconciler.rs  acp_ws.rs  auth.rs  mod.rs  push.rs
src/session/: builder.rs  config.rs  container_config.rs  deletion.rs  environment.rs  groups.rs  idle_reap.rs  instance.rs  mod.rs  profile_config.rs  repo_config.rs  serde_helpers.rs  storage.rs
src/sound/: config.rs  mod.rs
src/telemetry/: events.rs  mod.rs
src/tmux/: session.rs  (+4 more)
tests/: filewatch_degradation.rs  log_filter_watcher_migration.rs  serve_disk_reload_helper_equivalence.rs  serve_dynamic_profile_rewire.rs  serve_filewatch_propagation.rs  telemetry.rs
website/: index.html
xtask/: Cargo.toml
(+126 files in other folders)
